[package]
name = "figma-linux-rust-binding"
version = "0.1.0"
authors = ["Chugunov Roman"]
license = "GPL-2.0-only"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
libfonthelper = "0.3.4"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6", "event-queue-api", "try-catch-api"]
